<resources>
    <string name="app_name">Harmony</string>

    <string name="base_url">https://team-9-tcss450-backend.herokuapp.com/</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login_email">Email</string>
    <string name="text_login_password">Password</string>
    <string name="button_login_login">Log IN</string>
    <string name="button_login_register">REGISTER</string>
    <string name="text_register_FName">First Name</string>
    <string name="text_register_LName">Last Name</string>
    <string name="text_register_RetypePassword">Retype Password</string>
    <string name="text_select_avatar">Change Avatar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="text_password_recovery_enter_email">Please enter the email you used
        for your account</string>
    <string name="text_password_recovery_email_sent">An email has been sent to the provided email.
        Please use the temporary password to login and as your old password to reset it in
        the app settings</string>
    <string name="text_email_verification_prompt">Please enter the verification code that was sent to
    your email</string>
    <string name="text_password_reset_current">Current Password</string>
    <string name="text_password_reset_new">New Password</string>
    <string name="button_settings_change_password">Change Password</string>
    <string name="text_password_change_success">Your password has been updated!</string>
    <string name="button_password_change_success">Back</string>
    <string name="title_fragment_change_password">Change Password</string>
    <string name="button_login_forgot_password">Forgot your password?</string>
    <string name="button_update_chat_leave">Leave Chat</string>
    <string name="text_verification_enter_code">Code</string>

    <!--    Auth Validation-->
    <string name="text_validation">We sent a verification email to your
        registered email, the code is requried upon sign in.</string>
    <string name="button_validation_validate">Continue</string>

    <!--    NEW CHAT ROOM-->
    <string name="text_new_chat_title">Enter Chat Name</string>
    <string name="title_update_chat">Update</string>

    <string name="text_leave_validation">You have successfully left the chat.</string>

    <!-- Bottom Navigation -->
    <string name="title_home">Home</string>
    <string name="title_contact">Contacts</string>
    <string name="title_chats">Messages</string>
    <string name="title_weather">Weather</string>

    <!-- Home Fragment -->
    <string name="text_home_appName">Harmony</string>

    <!-- This is for Contact Fragments-->
    <string name="contact_avatar">Avatar</string>
    <string name="contact_name">Name</string>
    <string name="contact_username">Username</string>
    <string name="contact_id">ID</string>
    <string name="contact_status">Status</string>
    <string name="contact_card">Card</string>
    <string name="contact_message">Message</string>
    <string name="contact_request_card">Card</string>
    <string name="contact_request_accept">Accept</string>
    <string name="contact_request_delete">Delete</string>
    <string name="contact_add_sent">Request sent to user</string>
    <string name="contact_add_non_exist">User does not exist</string>

    <!-- This is for Chat Fragments-->

    <!-- This chat recyvlerviews -->
    <string name="keys_json_blogs_response">response</string>
    <string name="keys_json_blogs_data">data</string>
    <string name="keys_json_blogs_pubdate">pubdate</string>
    <string name="keys_json_blogs_title">title</string>
    <string name="keys_json_blogs_teaser">teaser</string>
    <string name="keys_json_blogs_url">url</string>
    <string name="action_settings">Settings</string>
    <string name="light_mode_settings">Light Mode</string>
    <string name="dark_mode_settings">Dark Mode</string>
    <string name="text_notification_home">Notifications</string>
    <string name="text_current_weather_home">Current Weather</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="keys_prefs_verified">Sharded Prefs Verified</string>
    <string name="keys_prefs_recovering">Sharded Prefs Recovering Password</string>
    <string name="home_notification_card_From">From:</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="fragment_add_contact">Add Contact</string>

    <string name="fragment_password_recover_info">Please use the password we sent you</string>

    <!-- Weather Strings -->
    <string name="weather_use_current_location">Use Your Current Location</string>
    <string name="weather_use_zipcode">Use A Zip Code</string>
    <string name="weather_use_map">Use a Location on the Map:</string>
    <string name="weather_select">Select</string>

    <!-- Weather Errors -->
    <string name="weather_location_current_location_not_found">*No weather information could be found for your current location.</string>
    <string name="weather_location_zip_invalid">*Please select a valid zip code.</string>
    <string name="weather_location_zip_location_not_found">*No weather information could be found for this zip code.</string>
    <string name="weather_location_map_location_not_selected">*Please select a location on the map.</string>
    <string name="weather_location_map_location_not_found">*No weather information could be found for this map location.</string>
    <string name="weather_location_server_timeout">*No weather information could be found for this map location.</string>
    <string name="weather_location_navigating_to_report">Loading weather report...</string>

    <string name="fragment_clear_home">Clear</string>
    <string name="fragment_blank_home"></string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_maps">Map</string>
    <string name="textView_confirmation_DeleteFragment">Confirmation</string>
    <string name="contact_member_email">Member Email</string>
    <string name="button_settings_change_avatar">Change Avatar</string>
</resources>