<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/request_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:onClick="@string/contact_card"
        app:layout_constraintBottom_toTopOf="@+id/contact_username"
        app:layout_constraintTop_toTopOf="@+id/contact_username">


        <ImageView
            android:id="@+id/request_Avatar"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/contact_man_512" />

        <TextView
            android:id="@+id/request_username"
            android:layout_width="183dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="100dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:text="@string/contact_username"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/request_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="60dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_decline_request_24dp" />

        <TextView
            android:id="@+id/request_Preview"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="8dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/request_accept"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/contact_message"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_new_chat_added" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>



<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:id="@+id/card_root"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_margin="5dp"-->
<!--    app:cardCornerRadius="5dp">-->

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/layout_inner"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/text_title"-->
<!--        app:layout_constraintTop_toTopOf="@+id/text_title">-->

<!--        <TextView-->
<!--            android:id="@+id/text_pubdate"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@color/colorPrimary"-->
<!--            android:paddingLeft="8dp"-->
<!--            android:paddingTop="8dp"-->
<!--            android:paddingRight="8dp"-->
<!--            android:textAppearance="?attr/textAppearanceListItem"-->
<!--            android:textColor="@color/colorOffWhite"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <TextView-->
<!--            android:id="@+id/text_title"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:paddingLeft="8dp"-->
<!--            android:paddingRight="8dp"-->
<!--            android:paddingBottom="8dp"-->
<!--            android:textAppearance="?attr/textAppearanceListItem"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/buitton_more"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/text_pubdate" />-->

<!--        <TextView-->
<!--            android:id="@+id/text_preview"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:paddingLeft="8dp"-->
<!--            android:paddingRight="8dp"-->
<!--            android:paddingBottom="8dp"-->
<!--            android:textAppearance="?attr/textAppearanceListItem"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/buitton_more" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/buitton_more"-->
<!--            style="@style/Widget.AppCompat.ImageButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:background="@android:drawable/screen_background_light_transparent"-->
<!--            app:layout_constraintBottom_toBottomOf="@+id/text_title"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:srcCompat="@drawable/ic_more_grey_24dp" />-->

<!--        <Button-->
<!--            android:id="@+id/button_full_post"-->
<!--            style="@style/Widget.AppCompat.Button.Borderless"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="post"-->
<!--            android:textColor="@color/colorAccent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/text_preview"-->
<!--            tools:visibility="visible" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--</androidx.cardview.widget.CardView>-->